--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "classnames": "^2.5.1",
+    "easymde": "^2.18.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "next": "14.2.4",
@@ -24,6 +25,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.2.1",
+    "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
     "zod": "^3.22.2"
