--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "classnames": "^2.5.1",
+    "delay": "^6.0.0",
     "easymde": "^2.18.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
@@ -28,6 +29,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.46.1",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
