--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^8.0.7",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
