--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
+    "@sentry/nextjs": "^8.11.0",
     "@tanstack/react-query": "^4.35.3",
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
