--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
     "easymde": "^2.18.0",
